--- a/tlenis/tlenis.html
+++ b/tlenis/tlenis.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="tlenis.css">
-    <script type="module" src="setup.lenis.js"></script>
+    <script type="module" src="tlenis.js"></script>
     <title>Test Lenis</title>
 </head>
 
