Add up to Fairytale to index.html

--- a/index.html
+++ b/index.html
@@ -11,12 +11,29 @@
 <body>
     <section>
         <h1>Top 10 Iconic Songs</h1>
-        <ol>
-            <li><a href="#waterloo">ABBA: Waterloo (1974)</a>
-            </li>
-            <li><a href="#hardrockhallelujah">LORDI: Hard Rock Hallelujah (2006)</a>
-            </li>
-        </ol>
+        <Summary>
+            <ul>
+                <li><a href="#whatiseurovision">What is Eurovision?</a></li>
+                <li><a href="#waterloo">ABBA: Waterloo (1974)</a></li>
+                <li><a href="#hardrockhallelujah">LORDI: Hard Rock Hallelujah (2006)</a></li>
+                <li><a href="#fairytale">Alexander Rybak: Fairytale (2009)</a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+            </ul>
+        </Summary>
+        <article>
+            <h2 id="whatiseurovision">What is Eurovision?</h2>
+            <p>
+                The Eurovision Song Contest is an <b>international song competition</b> organized annually by the European Broadcasting Union. Each participating country submits an original song to be performed live and transmitted to national broadcasters via the Eurovision and Euroradio networks, with competing countries then casting votes for the other countries' songs to determine a winner.</p>
+            <p>
+                Traditionally held in the country which won the preceding year's event, the contest provides an opportunity to <b>promote the host country and city</b> as a tourist destination. Thousands of spectators attend each year, along with journalists who cover all aspects of the contest, including rehearsals in venues, press conferences with the competing acts, in addition to other related events and performances in the host city.
+            </p>
+        </article>
         <article>
             <h2>ABBA: Waterloo (1974)</h2>
             <video controls autoplay muted height="300">
@@ -32,49 +49,19 @@
             <h2 id="hardrockhallelujah">Lordi: Hard Rock Hallelujah (2006)</h2>
             <video src="https://www.youtube.com/watch?v=gAh9NRGNhUU"></video>
             <p>Lordi is a Finnish rock band, formed in 1992 by the band's lead singer, songwriter, and costume maker, Mr. Lordi (Tomi Petteri Putaansuu). Influenced by hard rock and heavy metal music, Lordi are known for wearing <b>monster masks</b> and using horror elements with pyrotechnics during concerts and music videos.</p>
+            <p>The song was the surprise winner of the 2006 Eurovision Song Contest. Lordi is a Finnish monster rock band, and their entry attracted controversy and was regarded as something of a joke. <b>Finland had never won Eurovision</b> since its inception in 1956, and because of the country's appalling record it was decided that it had nothing to lose. But Lordi had the last laugh, and romped home with a record 292 points.</p>
         </article>
         <article>
-            <h2>Heading 2</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. A odit officiis aliquid debitis ipsum autem non
-                esse
-                nam ut impedit. Soluta repudiandae sed ea fuga incidunt, praesentium officiis consectetur quibusdam!</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas ullam repellendus numquam error non, iusto
-                molestiae minus nisi, molestias delectus, repellat officia doloremque? Odio perferendis libero
-                explicabo,
-                ipsum
-                ducimus amet.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque minima labore architecto id? Dolorem
-                voluptatem
-                autem molestiae blanditiis quos omnis ad, labore modi nemo odit impedit qui perferendis excepturi
-                corrupti.
+            <h2 id="fairytale">Alexander Rybak: Fairytale (2009)</h2>
+            <video controls autoplay muted height="300">
+                <source src="https://www.youtube.com/watch?v=qGQqj6WY4IE&ab_channel=EurovisionSongContest" type="video/mp4">
+            </video>
+            <p>Alexander Igorevich Rybak is a Belarusian-Norwegian singer-composer, violinist, pianist and actor. Representing Norway in the 2009 contest, he won the competition with 387 points —the <b>highest tally any country has achieved in the history of Eurovision</b> under the then-voting system— with “Fairytale”. Winning at the age of 23, Rybak remains the <b></b>youngest solo male winner of the contest</b> and the only Belarusian-born winner to date.
             </p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita accusantium cum omnis in mollitia
-                rerum! Ea
-                quasi, illum incidunt vero voluptatum odio iste voluptatem officiis totam dolores, temporibus quidem
-                consequatur?</p>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci repellendus iste modi dolorum ad
-                consequatur
-                unde inventore est ipsa sapiente aliquid eveniet nisi laudantium sint, ab ducimus autem praesentium
-                quaerat!
+            <p>
             </p>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum at est sint possimus in deserunt ab
-                praesentium
-                ea doloremque excepturi libero, veritatis, similique facilis tempore exercitationem! Nesciunt architecto
-                ad
-                repudiandae?</p>
-            <h3>Heading 3</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia, nam placeat. Ut mollitia voluptates
-                molestias
-                saepe nam quis fuga praesentium accusantium. Earum iusto labore, quo nam tempore consequuntur explicabo
-                perferendis!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi at vero adipisci natus esse optio! At
-                recusandae
-                asperiores a atque consequuntur omnis non labore libero veniam, ab voluptatum, vero mollitia!</p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus ullam veniam repellendus ipsum
-                reiciendis
-                quo, laboriosam repellat facilis, incidunt ducimus doloremque, ipsam sunt excepturi voluptates libero.
-                Tempore
-                illum eveniet praesentium!</p>
+            <p>
+            </p>
         </article>
     </section>
 </body>
