Complete Fairytale in index.html

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
             </video>
             <p>Alexander Igorevich Rybak is a Belarusian-Norwegian singer-composer, violinist, pianist and actor. Representing Norway in the 2009 contest, he won the competition with 387 points —the <b>highest tally any country has achieved in the history of Eurovision</b> under the then-voting system— with “Fairytale”. Winning at the age of 23, Rybak remains the <b></b>youngest solo male winner of the contest</b> and the only Belarusian-born winner to date.
             </p>
-            <p>
+            <p>Fairytale" was inspired by <b>Norwegian folk music</b>. The song was composed and written by Rybak and was performed with the modern folk dance company Frikar.
             </p>
-            <p>
+            <p>His win was celebrated throughout Europe for <b>crushing stereotypes</b> about the contest, such as needing an over-the-top performance or the influence of neighbor voting.
             </p>
         </article>
     </section>
