--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
                 <li><a href="#waterloo">ABBA: Waterloo (1974)</a></li>
                 <li><a href="#hardrockhallelujah">LORDI: Hard Rock Hallelujah (2006)</a></li>
                 <li><a href="#fairytale">Alexander Rybak: Fairytale (2009)</a></li>
-                <li><a href="#"></a></li>
+                <li><a href="#euphoria">Loreen: Euphoria (2012)<< /a>
+                </li>
                 <li><a href="#"></a></li>
                 <li><a href="#"></a></li>
                 <li><a href="#"></a></li>
@@ -61,6 +62,20 @@
             <p>Fairytale" was inspired by <b>Norwegian folk music</b>. The song was composed and written by Rybak and was performed with the modern folk dance company Frikar.
             </p>
             <p>His win was celebrated throughout Europe for <b>crushing stereotypes</b> about the contest, such as needing an over-the-top performance or the influence of neighbor voting.
+            </p>
+        </article>
+        <article>
+            <h2 id="euphoria">Loreen: Euphoria (2012)</h2>
+            <video controls autoplay muted height="300">
+                <source src="https://www.youtube.com/watch?v=Pfo-8z86x80&ab_channel=EurovisionSongContest" type="video/mp4">
+            </video>
+            <p>Loreen (born Lorine Zineb Nora Talhaoui) is a Swedish singer. She won the Eurovision Song Contest for Sweden in 2012 in Baku with the song Euphoria and again in Liverpool in 2023 with the song Tattoo. This makes her the <b>second person after Johnny Logan</b> to win the Eurovision Song Contest twice.
+            </p>
+            <p>In the run-up to the Eurovision Song Contest 2012, Loreen caused a stir by publicly <b>commenting on the human rights situation</b> in the host country, Azerbaijan, and by meeting with the country's opposition figures. Together with Anke Engelke's message to the Azerbaijani opposition via video message during the awarding of points, Loreen was one of the few central figures who publicly declared their political convictions.
+            </p>
+            <p>“Euphoria” won the competition with a total of 372 points, at the time the second-highest point total in the contest's history. The song received the highest number of maximum (12) points of any entry in the contest's history with <b>eighteen countries giving the song their top marks</b>.
+            </p>
+            <p>"Euphoria" received critical acclaim from most music critics. Commercially, the song was an instant success both in Sweden and in the rest of Europe. In Sweden, the song has been certified 10 times Platinum, selling 400,000 copies. Outside of Sweden, the song peaked at <b>number one in 16 countries</b> across Europe, the most chart-topping positions of any Eurovision winner.
             </p>
         </article>
     </section>
