--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li><a href="#fairytale">Alexander Rybak: Fairytale (2009)</a></li>
                 <li><a href="#euphoria">Loreen: Euphoria (2012)<< /a>
                 </li>
-                <li><a href="#"></a></li>
+                <li><a href="#zittiebuoni">Måneskin: Zitti E Buoni (2021)</a></li>
                 <li><a href="#"></a></li>
                 <li><a href="#"></a></li>
                 <li><a href="#"></a></li>
@@ -76,6 +76,30 @@
             <p>“Euphoria” won the competition with a total of 372 points, at the time the second-highest point total in the contest's history. The song received the highest number of maximum (12) points of any entry in the contest's history with <b>eighteen countries giving the song their top marks</b>.
             </p>
             <p>"Euphoria" received critical acclaim from most music critics. Commercially, the song was an instant success both in Sweden and in the rest of Europe. In Sweden, the song has been certified 10 times Platinum, selling 400,000 copies. Outside of Sweden, the song peaked at <b>number one in 16 countries</b> across Europe, the most chart-topping positions of any Eurovision winner.
+            </p>
+        </article>
+        <article>
+            <h2 id="zittiebuoni">Måneskin: Zitti E Buoni (2021)</h2>
+            <video controls autoplay muted height="300">
+                <source src="https://www.youtube.com/watch?v=RVH5dn1cxAQ&ab_channel=EurovisionSongContest" type="video/mp4">
+            </video>
+            <p>Måneskin is an Italian rock band. The band is composed of vocalist Damiano David, bassist Victoria De Angelis, guitarist Thomas Raggi, and drummer Ethan Torchio. <b>Performing in the streets</b> in its early days, it rose to prominence after finishing second in the eleventh season of the Italian version of X Factor in 2017. Its international breakthrough occurred when the foursome won the Eurovision Song Contest 2021 for Italy with the song "Zitti e buoni".
+            </p>
+            <p>"Zitti e buoni" (“Quiet and Well-Behaved”) was written and produced by all of Måneskin's members. The song's <b>initial ballad version</b> was written in 2016, but was gradually reworked into a rock song through the years. Måneskin spoke of the title as "referring to a cathartic anger, our anger transformed into something positive, which leads to change things".
+            </p>
+            <p>Måneskin received widespread acclaim for the performance and song at Eurovision. The media also took note of the kiss exchanged among David, Raggi, and Torchio on the broadcast during the winners' reprise performance at the end of the show, but as explained by David, it was a "spontaneous" gesture to challenge stereotypes and <b>in support of the LGBT community</b>.
+            </p>
+        </article>
+        <article>
+            <h2 id="anchor"></h2>
+            <video controls autoplay muted height="300">
+                <source src="" type="video/mp4">
+            </video>
+            <p>
+            </p>
+            <p>
+            </p>
+            <p>
             </p>
         </article>
     </section>
