Add up to Brotherhood of Man.

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                 <li><a href="#euphoria">Loreen: Euphoria (2012)<< /a>
                 </li>
                 <li><a href="#zittiebuoni">Måneskin: Zitti E Buoni (2021)</a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
+                <li><a href="#nepartezpassansmoi"></a>Céline Dion: Ne partez pas sans moi (1988)</li>
+                <li><a href="#saveyourkissesforme">Brotherhood of Man: Save your kisses for me (1976)</a></li>
+                <li><a href="#saveyourkissesforme">Brotherhood of Man: Save your kisses for me (1976)</a></li>
                 <li><a href="#"></a></li>
                 <li><a href="#"></a></li>
             </ul>
@@ -91,15 +91,27 @@
             </p>
         </article>
         <article>
-            <h2 id="anchor"></h2>
+            <h2 id="nepartezpassansmoi">Céline Dion: Ne partez pas sans moi (1988)</h2>
             <video controls autoplay muted height="300">
-                <source src="" type="video/mp4">
+                <source src="https://www.youtube.com/watch?v=8pEYw8PcBas&ab_channel=juan8969" type="video/mp4">
             </video>
-            <p>
+            <p>Céline Marie Claudette Dion is a Canadian singer. Referred to as the <b>"Queen of Power Ballads"</b>, she is noted for her powerful and technically skilled vocals. Her music has incorporated genres such as pop, rock, R&B, gospel, and classical music. She gained international recognition by winning the 1988 Eurovision Song Contest, where she represented Switzerland.
             </p>
-            <p>
+            <p>“Ne partez pas sans moi” (“Don’t leave without me“) won Eurovision with 137 points, beating the United Kingdom's entry "Go” <b>by just one point</b> in one of the closest finishes in Eurovision history. It is considered to be one of the most popular Eurovision entries, mainly because of Dion's subsequent international success.
             </p>
-            <p>
+            <p>As of May 2023, it is the <b>last French-language song to win the contest</b>.
+            </p>
+        </article>
+        <article>
+            <h2 id="saveyourkissesforme">Brotherhood of Man: Save your kisses for me (1976)</h2>
+            <video controls autoplay muted height="300">
+                <source src="https://www.youtube.com/watch?v=mWsKmx7uUbk&ab_channel=EurovisionGOLD" type="video/mp4">
+            </video>
+            <p>Brotherhood of Man are a British pop group who achieved <b>success in the 1970s</b>. They won the 1976 Eurovision Song Contest with "Save Your Kisses for Me".
+            </p>
+            <p>The song's lyrics described the gently conflicted emotions of a man leaving his loved one in the morning as he goes to work. The song's final line provided a twist that the person in question was his three-year-old child.
+            </p>
+            <p>"Save Your Kisses for Me" became a <b>worldwide hit</b>, reaching No. 1 in many countries, including the UK, where it became the biggest-selling song of the year. Overall, it remains one of the biggest-selling Eurovision winners ever, and the biggest such seller in the UK.
             </p>
         </article>
     </section>
