Correct anchor and add left margin for paragraphs.

--- a/tlenis/tlenis.html
+++ b/tlenis/tlenis.html
@@ -22,7 +22,7 @@
             </li>
         </ol>
         <article>
-            <h2>ABBA: Waterloo (from 1974)</h2>
+            <h2 id="#waterloo">ABBA: Waterloo (from 1974)</h2>
             <video controls autoplay muted height="300">
                 <source src="https://www.youtube.com/watch?v=3FsVeMz1F5c" type="video/mp4">
             </video>
@@ -33,7 +33,7 @@
             <p>The song differed from the standard "dramatic ballad" tradition of the Eurovision Song Contest by its flavor and rhythm, as well as by its performance. ABBA gave the audience something that had rarely been seen before in Eurovision: flashy costumes (including silver platform boots), plus a catchy uptempo song and even simple choreography. In 2005, “Waterloo” was chosen as the best song in the competition's history as part of the 50th anniversary celebration of the contest.</p>
         </article>
         <article>
-            <h2 id="hardrockhallelujah">LORDI: Hard Rock Hallelujah (2006)</h2>
+            <h2 id="hardrockhallelujah">Lordi: Hard Rock Hallelujah (2006)</h2>
             <video src=""></video>
             <p>Lordi is a Finnish rock band, formed in 1992 by the band's lead singer, songwriter, and
                 costume maker, Mr Lordi (Tomi Petteri Putaansuu). Influenced by hard rock and heavy
