--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>10 Songs from Eurovision Song Contest</title>
 </head>
 
 <body>
-    <section>
+    <section class="left-fixed">
+    </section>
+    <section class="mandatory-y scroll-content">
         <h1>Top 10 Iconic Songs</h1>
         <Summary>
             <ul>
