added some small changes and fixed scroll-snap-stop property

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <section class="left-fixed">
     </section>
     <section class="mandatory-y scroll-content">
-        <h1>Top 10 Iconic Songs</h1>
-        <Summary>
+        <!-- <h1>Top 10 Iconic Songs</h1>
+        <Summary>s
             <ul>
                 <li><a href="#whatiseurovision">What is Eurovision?</a></li>
                 <li><a href="#waterloo">ABBA: Waterloo (1974)</a></li>
                 <li><a href="#hardrockhallelujah">LORDI: Hard Rock Hallelujah (2006)</a></li>
                 <li><a href="#fairytale">Alexander Rybak: Fairytale (2009)</a></li>
-                <li><a href="#euphoria">Loreen: Euphoria (2012)<< /a>
+                <li><a href="#euphoria">Loreen: Euphoria (2012)</a>
                 </li>
                 <li><a href="#zittiebuoni">Måneskin: Zitti E Buoni (2021)</a></li>
                 <li><a href="#nepartezpassansmoi"></a>Céline Dion: Ne partez pas sans moi (1988)</li>
@@ -29,7 +29,7 @@
                 <li><a href="#"></a></li>
                 <li><a href="#"></a></li>
             </ul>
-        </Summary>
+        </Summary> -->
         <article>
             <h2 id="whatiseurovision">What is Eurovision?</h2>
             <p>
