--- a/index.html
+++ b/index.html
@@ -40,9 +40,7 @@
         </article>
         <article>
             <h2>ABBA: Waterloo (1974)</h2>
-            <video controls autoplay muted height="300">
-                <source src="https://www.youtube.com/watch?v=3FsVeMz1F5c" type="video/mp4">
-            </video>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/I8F5vKJcxCQ" title="ABBA: Waterloo (1974)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <p>ABBA are a Swedish super-group formed in Stockholm in 1972 by Agnetha Fältskog, Björn Ulvaeus, Benny Andersson, and Anni-Frid Lyngstad. The group's name is an acronym of the first letters of their first names arranged as a palindrome. They are <b>one of the most popular and successful musical groups of all time</b>, and are one of the best-selling music acts in the history of popular music, topping the charts worldwide from 1974 to 1982, and in 2022.
             </p>
             <p>In 1974, ABBA were Sweden's first winner of the Eurovision Song Contest with the song "Waterloo", which was <b>specifically</b> to be entered into the 1974 Eurovision Song Contest. The original title of the song was "Honey Pie". The song's lyrics are metaphorical and are about a woman who "surrenders" to a man and promises to love him, likening it to Napoleon's defeat at the Battle of Waterloo in 1815.
@@ -51,15 +49,13 @@
         </article>
         <article>
             <h2 id="hardrockhallelujah">Lordi: Hard Rock Hallelujah (2006)</h2>
-            <video src="https://www.youtube.com/watch?v=gAh9NRGNhUU"></video>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/gAh9NRGNhUU" title="Lordi: Hard Rock Hallelujah (2006)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <p>Lordi is a Finnish rock band, formed in 1992 by the band's lead singer, songwriter, and costume maker, Mr. Lordi (Tomi Petteri Putaansuu). Influenced by hard rock and heavy metal music, Lordi are known for wearing <b>monster masks</b> and using horror elements with pyrotechnics during concerts and music videos.</p>
             <p>The song was the surprise winner of the 2006 Eurovision Song Contest. Lordi is a Finnish monster rock band, and their entry attracted controversy and was regarded as something of a joke. <b>Finland had never won Eurovision</b> since its inception in 1956, and because of the country's appalling record it was decided that it had nothing to lose. But Lordi had the last laugh, and romped home with a record 292 points.</p>
         </article>
         <article>
             <h2 id="fairytale">Alexander Rybak: Fairytale (2009)</h2>
-            <video controls autoplay muted height="300">
-                <source src="https://www.youtube.com/watch?v=qGQqj6WY4IE&ab_channel=EurovisionSongContest" type="video/mp4">
-            </video>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/qGQqj6WY4IE" title="Alexander Rybak: Fairytale (2009)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <p>Alexander Igorevich Rybak is a Belarusian-Norwegian singer-composer, violinist, pianist and actor. Representing Norway in the 2009 contest, he won the competition with 387 points —the <b>highest tally any country has achieved in the history of Eurovision</b> under the then-voting system— with “Fairytale”. Winning at the age of 23, Rybak remains the <b></b>youngest solo male winner of the contest</b> and the only Belarusian-born winner to date.
             </p>
             <p>Fairytale" was inspired by <b>Norwegian folk music</b>. The song was composed and written by Rybak and was performed with the modern folk dance company Frikar.
@@ -69,9 +65,7 @@
         </article>
         <article>
             <h2 id="euphoria">Loreen: Euphoria (2012)</h2>
-            <video controls autoplay muted height="300">
-                <source src="https://www.youtube.com/watch?v=Pfo-8z86x80&ab_channel=EurovisionSongContest" type="video/mp4">
-            </video>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/Pfo-8z86x80" title="Loreen: Euphoria (2012)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <p>Loreen (born Lorine Zineb Nora Talhaoui) is a Swedish singer. She won the Eurovision Song Contest for Sweden in 2012 in Baku with the song Euphoria and again in Liverpool in 2023 with the song Tattoo. This makes her the <b>second person after Johnny Logan</b> to win the Eurovision Song Contest twice.
             </p>
             <p>In the run-up to the Eurovision Song Contest 2012, Loreen caused a stir by publicly <b>commenting on the human rights situation</b> in the host country, Azerbaijan, and by meeting with the country's opposition figures. Together with Anke Engelke's message to the Azerbaijani opposition via video message during the awarding of points, Loreen was one of the few central figures who publicly declared their political convictions.
@@ -83,9 +77,7 @@
         </article>
         <article>
             <h2 id="zittiebuoni">Måneskin: Zitti E Buoni (2021)</h2>
-            <video controls autoplay muted height="300">
-                <source src="https://www.youtube.com/watch?v=RVH5dn1cxAQ&ab_channel=EurovisionSongContest" type="video/mp4">
-            </video>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/RVH5dn1cxAQ" title="Måneskin: Zitti E Buoni (2021)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <p>Måneskin is an Italian rock band. The band is composed of vocalist Damiano David, bassist Victoria De Angelis, guitarist Thomas Raggi, and drummer Ethan Torchio. <b>Performing in the streets</b> in its early days, it rose to prominence after finishing second in the eleventh season of the Italian version of X Factor in 2017. Its international breakthrough occurred when the foursome won the Eurovision Song Contest 2021 for Italy with the song "Zitti e buoni".
             </p>
             <p>"Zitti e buoni" (“Quiet and Well-Behaved”) was written and produced by all of Måneskin's members. The song's <b>initial ballad version</b> was written in 2016, but was gradually reworked into a rock song through the years. Måneskin spoke of the title as "referring to a cathartic anger, our anger transformed into something positive, which leads to change things".
@@ -95,9 +87,7 @@
         </article>
         <article>
             <h2 id="nepartezpassansmoi">Céline Dion: Ne partez pas sans moi (1988)</h2>
-            <video controls autoplay muted height="300">
-                <source src="https://www.youtube.com/watch?v=8pEYw8PcBas&ab_channel=juan8969" type="video/mp4">
-            </video>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/8pEYw8PcBas" title="Céline Dion: Ne partez pas sans moi (1988)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <p>Céline Marie Claudette Dion is a Canadian singer. Referred to as the <b>"Queen of Power Ballads"</b>, she is noted for her powerful and technically skilled vocals. Her music has incorporated genres such as pop, rock, R&B, gospel, and classical music. She gained international recognition by winning the 1988 Eurovision Song Contest, where she represented Switzerland.
             </p>
             <p>“Ne partez pas sans moi” (“Don’t leave without me“) won Eurovision with 137 points, beating the United Kingdom's entry "Go” <b>by just one point</b> in one of the closest finishes in Eurovision history. It is considered to be one of the most popular Eurovision entries, mainly because of Dion's subsequent international success.
@@ -107,9 +97,8 @@
         </article>
         <article>
             <h2 id="saveyourkissesforme">Brotherhood of Man: Save your kisses for me (1976)</h2>
-            <video controls autoplay muted height="300">
-                <source src="https://www.youtube.com/watch?v=mWsKmx7uUbk&ab_channel=EurovisionGOLD" type="video/mp4">
-            </video>
+
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/fhq_Q1Ut8SQ" title="Brotherhood of Man: Save your kisses for me (1976)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <p>Brotherhood of Man are a British pop group who achieved <b>success in the 1970s</b>. They won the 1976 Eurovision Song Contest with "Save Your Kisses for Me".
             </p>
             <p>The song's lyrics described the gently conflicted emotions of a man leaving his loved one in the morning as he goes to work. The song's final line provided a twist that the person in question was his three-year-old child.
