added a horisontal scroll bar in left element

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 </head>
 
 <body>
-    <section class="left-fixed">
+    <section class="left-fixed mandatory-x">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
     </section>
     <section class="mandatory-y scroll-content">
         <!-- <h1>Top 10 Iconic Songs</h1>
@@ -118,6 +123,7 @@
             </p>
         </article>
     </section>
+    <script src="script.js"></script>
 </body>
 
 </html>
