Testing lenis in index.html

--- a/tlenis/tlenis.html
+++ b/tlenis/tlenis.html
@@ -13,6 +13,13 @@
 </head>
 
 <body>
+    <section class="left-fixed mandatory-x">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </section>
     <section>
         <h1>Top 10 Iconic Songs</h1>
         <ol>
