--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@latest/bundled/lenis.js"></script>
-    <!-- <script src="lenis.js"></script> -->
+    <link rel="stylesheet" href="styles.css">
+    <script src="lenis.js"></script>
     <title>10 Songs from Eurovision Song Contest</title>
 </head>
 
