--- a/index.html
+++ b/index.html
@@ -16,56 +16,43 @@
         <article>
             
         </article>
-        <article>
-            <h2>ABBA: Waterloo (1974)</h2>
+        <article class="left-side">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/I8F5vKJcxCQ" title="ABBA: Waterloo (1974)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </article>
-        <article>
-            <h2 id="hardrockhallelujah">Lordi: Hard Rock Hallelujah (2006)</h2>
+        <article class="left-side">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/gAh9NRGNhUU" title="Lordi: Hard Rock Hallelujah (2006)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </article>
-        <article>
-            <h2 id="fairytale">Alexander Rybak: Fairytale (2009)</h2>
+        <article class="left-side">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/qGQqj6WY4IE" title="Alexander Rybak: Fairytale (2009)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </article>
-        <article>
-            <h2 id="euphoria">Loreen: Euphoria (2012)</h2>
+        <article class="left-side">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/Pfo-8z86x80" title="Loreen: Euphoria (2012)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </article>
-        <article>
-            <h2 id="zittiebuoni">Måneskin: Zitti E Buoni (2021)</h2>
+        <article class="left-side">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/RVH5dn1cxAQ" title="Måneskin: Zitti E Buoni (2021)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </article>
-        <article>
-            <h2 id="nepartezpassansmoi">Céline Dion: Ne partez pas sans moi (1988)</h2>
+        <article class="left-side">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/8pEYw8PcBas" title="Céline Dion: Ne partez pas sans moi (1988)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </article>
-        <article>
-            <h2 id="saveyourkissesforme">Brotherhood of Man: Save your kisses for me (1976)</h2>
+        <article class="left-side">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/fhq_Q1Ut8SQ?start=71" title="Brotherhood of Man: Save your kisses for me (1976)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </article>
-        <article>
-            <h2>Dana International: Diva (1998)</h2>
+        <article class="left-side">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/Q8ZfreUQfvc" title="DIVA - DANA INTERNATIONAL (Israel 1998 - Eurovision Song Contest HD)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </article>
-        <article>
-            <h2>Conchita Wurst: Rise Like A Phoenix (2014)</h2>
+        <article class="left-side">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/SaolVEJEjV4" title="Conchita Wurst - Rise Like a Phoenix (Austria) 2014 LIVE Eurovision Second Semi-Final" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </article>
-        <article>
-            <h2>Lys Assia: Refrain (1956)</h2>
+        <article class="left-side">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/muaEpHexmwg" title="Refrain - Lys Assia (Eurovision Song Contest - Switzerland 1956)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </article>
-        <article>
-            <h2>Hatari: Hatrið mun sigra (2019)</h2>
+        <article class="left-side">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/kTb69WkBbvs" title="Iceland - LIVE - Hatari - Hatrið mun sigra - Grand Final - Eurovision 2019" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </article>
-        <article>
-            <h2>The “boring French song” phenomenon</h2>
+        <article class="left-side">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/tJful-Jtc9o" title="Lisa Angell - N&#39;oubliez Pas (France) - LIVE at Eurovision 2015 Grand Final" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </article>
-        <article>
-            <h2>Verka Serduchka: Dancing Lasha Tumbai (2007)</h2>
+        <article class="left-side">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/hfjHJneVonE" title="Verka Serduchka - Dancing Lasha Tumbai | Ukraine 🇺🇦 | Grand Final - Eurovision 2007" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </article>
     </section>
@@ -87,16 +74,17 @@
                 <li><a href="#"></a></li>
             </ul>
         </Summary> -->
-        <article>
+        <article class="right-side">
+            <div class="background-buffer">
             <h2 id="whatiseurovision">What is Eurovision?</h2>
             <p>
                 The Eurovision Song Contest is an <b>international song competition</b> organized annually by the European Broadcasting Union. Each participating country submits an original song to be performed live and transmitted to national broadcasters via the Eurovision and Euroradio networks, with competing countries then casting votes for the other countries' songs to determine a winner.</p>
             <p>
                 Traditionally held in the country which won the preceding year's event, the contest provides an opportunity to <b>promote the host country and city</b> as a tourist destination. Thousands of spectators attend each year, along with journalists who cover all aspects of the contest, including rehearsals in venues, press conferences with the competing acts, in addition to other related events and performances in the host city.
-            </div>
             </p>
+        </div>
         </article>
-        <article class="background-pink">
+        <article class="right-side background-pink">
             <div class="background-buffer">
             <h2>ABBA: Waterloo (1974)</h2>
             <p>ABBA are a Swedish super-group formed in Stockholm in 1972 by Agnetha Fältskog, Björn Ulvaeus, Benny Andersson, and Anni-Frid Lyngstad. The group's name is an acronym of the first letters of their first names arranged as a palindrome. They are <b>one of the most popular and successful musical groups of all time</b>, and are one of the best-selling music acts in the history of popular music, topping the charts worldwide from 1974 to 1982, and in 2022.
@@ -106,14 +94,14 @@
             <p>The song differed from the standard "dramatic ballad" tradition of the Eurovision Song Contest by its <b>and rhythm</b>, as well as by its performance. ABBA gave the audience something that had rarely been seen before in Eurovision: <b>flashy costumes</b> (including silver platform boots), plus a catchy uptempo song and even simple choreography. In 2005, “Waterloo” was chosen as the <b>best song in the competition's history</b> as part of the 50th anniversary celebration of the contest.</p>
         </div>
         </article>
-        <article class="background-blue">
+        <article class="right-side background-blue">
             <div class="background-buffer">
             <h2 id="hardrockhallelujah">Lordi: Hard Rock Hallelujah (2006)</h2>
             <p>Lordi is a Finnish rock band, formed in 1992 by the band's lead singer, songwriter, and costume maker, Mr. Lordi (Tomi Petteri Putaansuu). Influenced by hard rock and heavy metal music, Lordi are known for wearing <b>monster masks</b> and using horror elements with pyrotechnics during concerts and music videos.</p>
             <p>The song was the surprise winner of the 2006 Eurovision Song Contest. Lordi is a Finnish monster rock band, and their entry attracted controversy and was regarded as something of a joke. <b>Finland had never won Eurovision</b> since its inception in 1956, and because of the country's appalling record it was decided that it had nothing to lose. But Lordi had the last laugh, and romped home with a record 292 points.</p>
         </div>
         </article>
-        <article class="background-yellow">
+        <article class="right-side background-yellow">
             <div class="background-buffer">
             <h2 id="fairytale">Alexander Rybak: Fairytale (2009)</h2>
             <p>Alexander Igorevich Rybak is a Belarusian-Norwegian singer-composer, violinist, pianist and actor. Representing Norway in the 2009 contest, he won the competition with 387 points —the <b>highest tally any country has achieved in the history of Eurovision</b> under the then-voting system— with “Fairytale”. Winning at the age of 23, Rybak remains the <b></b>youngest solo male winner of the contest</b> and the only Belarusian-born winner to date.
@@ -124,7 +112,7 @@
             </p>
         </div>
         </article>
-        <article class="background-pink">
+        <article class="right-side background-pink">
             <div class="background-buffer">
             <h2 id="euphoria">Loreen: Euphoria (2012)</h2>
             <p>Loreen (born Lorine Zineb Nora Talhaoui) is a Swedish singer. She won the Eurovision Song Contest for Sweden in 2012 in Baku with the song Euphoria and again in Liverpool in 2023 with the song Tattoo. This makes her the <b>second person after Johnny Logan</b> to win the Eurovision Song Contest twice.
@@ -137,7 +125,7 @@
             </p>
         </div>
         </article>
-        <article class="background-blue">
+        <article class="right-side background-blue">
             <div class="background-buffer">
             <h2 id="zittiebuoni">Måneskin: Zitti E Buoni (2021)</h2>
             <p>Måneskin is an Italian rock band. The band is composed of vocalist Damiano David, bassist Victoria De Angelis, guitarist Thomas Raggi, and drummer Ethan Torchio. <b>Performing in the streets</b> in its early days, it rose to prominence after finishing second in the eleventh season of the Italian version of X Factor in 2017. Its international breakthrough occurred when the foursome won the Eurovision Song Contest 2021 for Italy with the song "Zitti e buoni".
@@ -148,7 +136,7 @@
             </p>
         </div>
         </article>
-        <article class="background-yellow">
+        <article class="right-side background-yellow">
             <div class="background-buffer">
             <h2 id="nepartezpassansmoi">Céline Dion: Ne partez pas sans moi (1988)</h2>
             <p>Céline Marie Claudette Dion is a Canadian singer. Referred to as the <b>"Queen of Power Ballads"</b>, she is noted for her powerful and technically skilled vocals. Her music has incorporated genres such as pop, rock, R&B, gospel, and classical music. She gained international recognition by winning the 1988 Eurovision Song Contest, where she represented Switzerland.
@@ -159,7 +147,7 @@
             </p>
             </div>
         </article>
-        <article class="background-pink">
+        <article class="right-side background-pink">
             <div class="background-buffer">
             <h2 id="saveyourkissesforme">Brotherhood of Man: Save your kisses for me (1976)</h2>
 
@@ -171,7 +159,7 @@
             </p>
         </div>
         </article>
-        <article class="background-blue">
+        <article class="right-side background-blue">
             <div class="background-buffer">
             <h2>Dana International: Diva (1998)</h2>
             <p>Sharon Cohen, professionally known as Dana International, is an Israeli pop singer. Sharon's stage name Dana International comes from the title track of her album, and was originally spelled with two n's. At 18 years of age, Cohen (still legally male at the time) earned a living as a drag queen, parodying many famous female singers. Dana was chosen to represent Israel in the Eurovision Song Contest 1998 in Birmingham with the song "Diva", and her childhood dream of performing in the song contest finally came true.</p>
@@ -181,7 +169,7 @@
             <p>It wasn't without its trials, and Dana's representation of her country created a furore among Israel's Orthodox Jewish community. After her win, she addressed her detractors. “My victory proves God is on my side,” read her statement. “I want to send my critics a message of forgiveness: try to accept me. I am what I am.” Today, she claims she enjoyed the backlash. “I don't care what they say about me,” she says. “I believe in God, in freedom, that everyone has a right to live how they choose.”</p>
         </div>
         </article>
-        <article class="background-yellow">
+        <article class="right-side background-yellow">
             <div class="background-buffer">
             <h2>Conchita Wurst: Rise Like A Phoenix (2014)</h2>
             <p>Conchita Wurst is an Austrian singer and drag queen. Born in Gmunden, Thomas Neuwirth moved to Graz to do his matura exam with a focus on fashion, before embarking on a singing career through the 2007 casting show Starmania. He subsequently became a founding member of the short-lived boy band Jetzt Anders!. In 2011, Neuwirth began appearing as Conchita—a female character noted for her beard—and came second in the Austrian pre-selection for the Eurovision Song Contest 2012.</p>
@@ -195,7 +183,7 @@
             <p>Overall, Conchita Wurst's Eurovision victory had a profound impact on promoting LGBTQ+ visibility, fostering discussions on acceptance, and inspiring individuals to embrace diversity and authenticity. It remains an important moment in the history of the Eurovision Song Contest and the broader cultural landscape.</p>
         </div>
         </article>
-        <article class="background-pink">
+        <article class="right-side background-pink">
             <div class="background-buffer">
             <h2>Lys Assia: Refrain (1956)</h2>
             <p>Lys Assia (born Rosa Mina Schärer) was a Swiss singer who won the first Eurovision Song Contest in 1956. Assia was born in Rupperswil, Aargau, and began her stage career as a dancer, but changed to singing in 1940 after successfully standing in for a female singer.</p>
@@ -203,7 +191,7 @@
             <p>Lys Assia remained a loyal supporter of the Eurovision Song Contest, being a guest of honour in many occasions, like in Gothenburg in 1985 when Eurovision was celebrating its 30th edition. In 2003, she addressed millions of viewers via a satellite link from Cyprus, wishing the contestants the best of luck ahead of the Grand Final in Riga. Being asked by presenter Marie N., who also won the contest the year before, how she looked back at the 1956 contest, she spoke the legendary words: "It was fun — I won!" In 2005, she performed during Congratulations, celebrating the 50th anniversary of the Eurovision Song Contest and in 2008 she started the voting in Belgrade.</p>
         </div>
         </article>
-        <article class="background-blue">
+        <article class="right-side background-blue">
             <div class="background-buffer">
             <h2>Hatari: Hatrið mun sigra (2019)</h2>
             <p>Hatari is an Icelandic techno, industrial and punk rock band and performance art group from Reykjavík. Their public image incorporates elements of anti-capitalism and BDSM attire. On stage, the group, whose name means “Hater”, presents a fascist-inspired dystopia of blood-splattered whippings. In person, they are softly spoken and occasionally cheerfully optimistic.</p>
@@ -212,7 +200,7 @@
             <p>Hatari have managed to galvanise an army of weirdos, hipsters, homosexuals, grannies and, somewhat inexplicably, their biggest fanbase: Icelandic children. Hatari really put itself in the crossfire in the name of love. It sacrificed itself, just to show Israel and BDS that they can agree on something. They truly brought people together. And they would have deserved to win the award for that.</p>
         </div>
         </article>
-        <article class="background-yellow">
+        <article class="right-side background-yellow">
             <div class="background-buffer">
             <h2>The “boring French song” phenomenon</h2>
             <p>When you hear “France” and “Eurovision” side by side, what distinctive features come to your mind? How would you describe a typical French entry for Eurovision? Most likely roughly like this: an incredibly good-looking woman (less frequently — man) in a stunning gown, expressing A LOT of strong emotions, often in the form of a ballad while sounding very “french” if you know what I mean. All these epithets formed a kind of stereotype of a typical French performance at the Eurovision Song Contest, as the Youtube comments section confirms. A huge number of people write about how the French performances look and sound the same every year. And they are not entirely wrong here. Obviously, beauty is in eye of the beholder, but the “french pattern” is definitely a thing.</p>
@@ -220,7 +208,7 @@
             <p>To illustrate that, let's have a look at Lisa Angell's "N'oubliez Pas". Safe to say that this performance checks nearly all the contingent criteria of a typical “boring French song“: a woman in an elegant black dress singing in a tearful voice about the need to remember World War I and, more broadly, wars in general. This is certainly a very strong message, but probably not the best format for a contest like this. Thus, the singer took 25th place out of 27.</p>
         </div>
         </article>
-        <article class="background-blue">
+        <article class="right-side background-blue">
             <div class="background-buffer">
             <h2>Verka Serduchka: Dancing Lasha Tumbai (2007)</h2>
             <p>Verka Seduchka is the drag persona of Ukrainian comedian and pop singer Andriy Danylko. He began his career in 1991 and invented the character's name by combining the randomly picked first name Verka and the last name of a former school classmate, Anya Serduk. Although he has also performed under his real name, most of his performances are done under this stage name.</p>
